TestRepo2/src/objects/Organizational_Unit__c.object
<CustomObject>
    <description>POS Project: object that represents a hierarchy level within the distributors hierarchy</description>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Location__c</fullName>
        <formula>IF(ISBLANK(Parent__c), Name, IF(ISBLANK(Parent__r.Parent__c), Parent__r.Name &amp; &apos;/&apos; &amp; Name, IF(ISBLANK(Parent__r.Parent__r.Parent__c), Parent__r.Parent__r.Name &amp; &apos;/&apos; &amp; Parent__r.Name &amp; &apos;/&apos; &amp; Name, Parent__r.Parent__r.Parent__r.Name &amp; &apos;/&apos; &amp; Parent__r.Parent__r.Name &amp; &apos;/&apos; &amp; Parent__r.Name &amp; &apos;/&apos; &amp; Name)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <picklist>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Organizational_Unit__c</referenceTo>
        <relationshipLabel>Organizational Units</relationshipLabel>
        <relationshipName>Organizational_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Code__c</fullName>
        <label>Responsible Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Organizational Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Spirits_WBS_View</fullName>
        <columns>Hierarchy_Location__c</columns>
        <columns>NAME</columns>
        <columns>District_Code__c</columns>
        <columns>Responsible_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Spirits</value>
        </filters>
        <label>Spirits WBS View</label>
    </listViews>
    <listViews>
        <fullName>Wine_WBS_View</fullName>
        <columns>Hierarchy_Location__c</columns>
        <columns>NAME</columns>
        <columns>District_Code__c</columns>
        <columns>Responsible_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Wine</value>
        </filters>
        <label>Wine WBS View</label>
    </listViews>
    <nameField>
        <label>Organizational Unit Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Account_00NA0000009YtnrMAC</fullName>
        <active>false</active>
        <field>Account.Spirits_Hierarchy__c</field>
        <filterItems>
            <field>Organizational_Unit__c.Type__c</field>
            <operation>equals</operation>
            <value>Spirits</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Spirits Hierarchy</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NA0000009YzS7MAK</fullName>
        <active>false</active>
        <field>Account.Wine_Hierarchy__c</field>
        <filterItems>
            <field>Organizational_Unit__c.Type__c</field>
            <operation>equals</operation>
            <value>Wine</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Wine Hierarchy</name>
    </namedFilters>
    <pluralLabel>Organizational Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>